dovecot/dovecot-pigeonhole/tests/execute/errors/fileinto-invalid-name.sieve
require "fileinto";
require "mailbox";

fileinto :create "foo//somedomain/org";

